--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "dependencies": {
     "express": "^5.1.0",
-    "mongoose": "^8.15.0"
+    "mongoose": "^8.15.0",
+    "nodemon": "^3.1.10"
   },
   "name": "backend-journey",
   "version": "1.0.0",
   "description": "starts here",
-  "main": "app.js",
-  "devDependencies": {},
+  "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "nodemon src/index.js"
   },
   "author": "sheikh rizwan",
   "license": "ISC"
