--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongoose": "^8.15.0",
     "nodemon": "^3.1.10"
@@ -11,7 +12,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/index.js"
+    "start": "nodemon -r dotenv/config  --experimental-json-modules src/index.js"
   },
   "author": "sheikh rizwan",
   "license": "ISC",
